--- a/hardskills/modulohtml/lojapet/styles/style.css
+++ b/hardskills/modulohtml/lojapet/styles/style.css
@@ -511,7 +511,6 @@ span#hr {
     line-height: 45px;
     width: 1fr;
     height: 1fr;
-    padding: 15px;
 }
 
 .loja .item {
@@ -564,6 +563,13 @@ span#hr {
     background-image: url("https://static.wixstatic.com/media/82fcd3_270fc58ffa4f4ecb9e6b91ee2958f619~mv2_d_1920_1920_s_2.jpg/v1/fill/w_140,h_140,al_c,q_80,usm_0.66_1.00_0.01/82fcd3_270fc58ffa4f4ecb9e6b91ee2958f619~mv2_d_1920_1920_s_2.webp");
 }
 
+.loja > .item > .item-title {
+    font: normal normal normal 18px/1.4em poppins-semibold,poppins,sans-serif;
+}
+
+.loja > .item > .item-price {
+    font: normal normal normal 16px/1.4em avenir-lt-w01_35-light1475496,sans-serif;
+}
 
 .loja > .item > .item-quanty {
     display: flex;
