--- a/hardskills/modulohtml/restaurante/styles/main.css
+++ b/hardskills/modulohtml/restaurante/styles/main.css
@@ -33,6 +33,7 @@
     --color_33: 168,84,84;
     --color_34: 139,0,0;
     --color_35: 70,0,0;
+    --bg: 239,65,53;
     --font_0: normal normal normal 88px/1.4em belinda-w00-regular,script;
     --font_1: normal normal normal 16px/1.4em din-next-w01-light,din-next-w02-light,din-next-w10-light,sans-serif;
     --font_2: normal normal normal 45px/1.4em dinneuzeitgroteskltw01-_812426,sans-serif;
