--- a/hardskills/modulohtml/restaurante/styles/style.css
+++ b/hardskills/modulohtml/restaurante/styles/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior:smooth;
+}
+
 body{
     margin:0;
 }
@@ -5,7 +9,9 @@ body{
 .parallax {
     position: absolute;
     background-size:cover;
+    background-repeat: no-repeat;
     background-attachment: fixed;
+    background-position: 50% 50%;
     transform: translateZ(-20px) scale(1.1);
     z-index: 0;
 }
@@ -25,8 +31,61 @@ body{
     height: 100%;
     
 }
-/*width: 100%;
-height: 100%;*/
+
+.spikesbox {
+    position: relative;
+    z-index: 2;
+}
+
+.spikes {
+    display: block;
+    --zigzagsize: 10px;
+    --brd: var(--color_23);
+    --alpha-brd: 1;
+    width:100%;
+    height: 10px;
+    flex-basis: var(--zigzagsize,10px);
+    background-image: 
+        linear-gradient(135deg,hsl(0deg 0% 0% / 0%) var(--zigzagsize,100%),rgba(var(--brd,var(--color_15)),var(--alpha-brd,1)) var(--zigzagsize,100%)),
+        linear-gradient(-135deg,hsl(0deg 0% 0% / 0%) var(--zigzagsize,100%),rgba(var(--brd,var(--color_15)),var(--alpha-brd,1)) var(--zigzagsize,100%));
+    background-size: var(--zigzagsize,100%) var(--zigzagsize,100%);
+    background-repeat: repeat-x;
+    background-position: 50% 50%;
+}
+
+.afterspikes {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    --brd: var(--color_23);
+    --alpha-brd: 1;
+    width: 100%;
+    flex-basis: 50%;
+    height: 134px;
+    
+    background-color: rgb(var(--color_23));
+}
+
+.afterspikes > h2 {
+    margin: 0;
+    font: var(--font_2);
+    text-align: center;
+    font-size: 45px;
+    color: rgb(var(--color_11));
+    line-height: 0.9em;
+}
+
+.afterspikes > h4 {
+    margin: 0;
+    line-height: 1.2em;
+    text-align: center;
+    font-size: 17px;
+    color: rgb(var(--color_11));
+    font: var(--font_7);
+    
+    margin-top: 10px;
+}
 
 .topbar {
     background-color: rgb(var(--color_11));
@@ -39,6 +98,48 @@ height: 100%;*/
     padding-left: 10%;
 }
 
+.topbar > nav {
+    display: flex;
+    align-items: flex-end;
+    flex-grow: 1;
+}
+
+.topbar > nav > ul {
+    padding: 0;
+    margin-bottom: 10px;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    list-style: none;
+    max-width: 894px;
+}
+
+.topbar > nav li {
+    margin-left: 1em;
+    padding-top: .8em;
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+}
+
+.topbar > nav li:hover {
+    border-top: 2px solid rgb(239,65,53);
+}
+
+.topbar > nav li:active {
+    border-top: 2px solid rgb(239,65,53);
+}
+
+.topbar > nav a {
+    text-decoration: none;
+    margin-top: 5px;
+    text-align: center;
+    line-height: 32px;
+    color: rgb(239,65,53);
+    font: var(--font_7);
+    white-space: nowrap;
+}
 
 .svgimg {    
     background-color: rgb(var(--color_18));
@@ -208,48 +309,6 @@ height: 100%;*/
     height: fit-content;
 }
 
-.spikesbox {
-    position: relative;
-    z-index: 2;
-}
-
-.spikes {
-    display: block;
-    --zigzagsize: 10px;
-    --brd: var(--color_23);
-    --alpha-brd: 1;
-    width:100%;
-    height: 10px;
-    flex-basis: var(--zigzagsize,10px);
-    background-image: 
-        linear-gradient(135deg,hsl(0deg 0% 0% / 0%) var(--zigzagsize,100%),rgba(var(--brd,var(--color_15)),var(--alpha-brd,1)) var(--zigzagsize,100%)),
-        linear-gradient(-135deg,hsl(0deg 0% 0% / 0%) var(--zigzagsize,100%),rgba(var(--brd,var(--color_15)),var(--alpha-brd,1)) var(--zigzagsize,100%));
-    background-size: var(--zigzagsize,100%) var(--zigzagsize,100%);
-    background-repeat: repeat-x;
-    background-position: 50% 50%;
-}
-
-.afterspikes {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    --brd: var(--color_23);
-    --alpha-brd: 1;
-    width: 100%;
-    flex-basis: 50%;
-    height: 134px;
-    background-color: rgba(var(--brd,var(--color_15)),var(--alpha-brd,1));
-}
-
-.afterspikes > h2 {
-    margin: 0;
-    font: var(--font_2);
-    text-align: center;
-    font-size: 45px;
-    color: rgb(var(--color_11));
-    line-height: 0.9em;
-}
-
 .banners {
     display: flex;
     flex-direction: row;
@@ -394,4 +453,172 @@ height: 100%;*/
     text-align: center;
     line-height: 1.3em;
     font-size: 43px;
+}
+
+#mosaico {
+    flex-direction: column;
+    
+    margin-bottom: -10px;
+}
+
+#mosaico > div {
+    display: flex;
+    flex-grow: 1;
+    width: fit-content;
+    height: fit-content;
+}
+
+#mosaico > div > div {
+    display: flex;
+    flex-grow: 1;
+    width: 495px;
+    height: 495px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#mosaico > div:nth-child(2n-1) > img {
+    background-color: rgb(var(--color_18));
+}
+
+#mosaico > div:nth-child(1) h3{
+    margin: 0;
+    letter-spacing: 3.5px;
+    text-align: center;
+    line-height: 1.1em;
+    font-size: 35px;
+    font: var(--font_4);
+    color: rgb(var(--color_18));
+}
+
+#mosaico > div:nth-child(1) i{
+    margin: 0;
+    letter-spacing: normal;
+    text-align: center;
+    line-height: 0.5em;
+    font-size: 43px;
+    font: var(--font_3);
+    color: rgb(var(--color_18));
+}
+
+#mosaico > div:nth-child(1) p{
+    margin: 0;
+    letter-spacing: normal;
+    font: var(--font_8);
+    color: rgb(var(--color_18));
+    text-align: center;
+    font-size: 15px;
+    line-height: 1.5em;
+    width: 266px;
+}
+
+#mosaico > div:nth-child(2) h3{
+    margin: 0;
+    text-align: center;
+    line-height: 1.1em;
+    font-size: 35px;
+    color: rgb(var(--color_23));
+    letter-spacing: 3.5px;
+}
+
+#mosaico > div:nth-child(2) i{
+    margin: 0;
+    line-height: 0.5em;
+    color: rgb(var(--color_23));
+    text-align: center;
+    font-size: 43px;
+    letter-spacing: normal;
+    font: var(--font_3);
+}
+
+#mosaico > div:nth-child(2) p{
+    margin: 0;
+    letter-spacing: normal;
+    font: var(--font_8);
+    color: rgb(var(--color_23));
+    text-align: center;
+    font-size: 15px;
+    line-height: 1.5em;
+    width: 266px;
+}
+
+#mosaico > div:nth-child(3) h3{
+    margin: 0;
+    letter-spacing: 3.5px;
+    text-align: center;
+    line-height: 1.1em;
+    font-size: 35px;
+    font: var(--font_4);
+    color: rgb(var(--color_18));
+}
+
+#mosaico > div:nth-child(3) h4{
+    margin: 0;
+    letter-spacing: 0.55em;
+    color: rgb(var(--color_18));
+    text-align: center;
+    line-height: 1.3em;
+    font-size: 17px;
+    font: var(--font_7);
+}
+
+#mosaico > div:nth-child(3) i{
+    margin: 0;
+    font: var(--font_3);
+    letter-spacing: normal;
+    text-align: center;
+    font-size: 43px;
+    color: rgb(var(--color_18));
+}
+
+#mosaico > div:nth-child(3) p{
+    margin: 0;
+    letter-spacing: normal;
+    font: var(--font_8);
+    color: rgb(var(--color_18));
+    text-align: center;
+    font-size: 15px;
+    line-height: 1.5em;
+    width: 266px;
+}
+
+#showbox {
+    height: 642px;
+    margin-bottom: -10px;
+}
+
+#showbox > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#location {
+
+}
+
+#location > div:nth-child(2) {
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    color: rgb(var(--color_11));
+    background-color: rgb(var(--color_23));
+}
+
+#location form {
+    width: 492px;
+    height: 279px;
+}
+
+footer {
+    line-height: 1.3em;
+    text-align: center;
+    font-size: 13px;
+    font: var(--font_9);
+    color: rgb(var(--color_23));
+    text-align:center;
+    margin: 14px 0px 19px 0px;
 }
