--- a/hardskills/programacao/aula6/styles/style.css
+++ b/hardskills/programacao/aula6/styles/style.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'kenney_future_narrowregular';
+    src: url('../fonts/kenney_future_narrow.woff2') format('woff2'),
+         url('../fonts/kenney_future_narrow.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 :root {
     
 }
@@ -9,7 +17,15 @@
 }
 
 h1 {
+    margin: 1%;
+    text-align: center;
     font-size: 5em;
+    
+    font-family: 'kenney_future_narrowregular';
+}
+
+h2 {
+    font-family: 'kenney_future_narrowregular';
 }
 
 img {
@@ -23,14 +39,39 @@ main {
 
 }
 
-#mim {
-    display: flex;
-    flex-direction: column;
-    width: 30%;
+ul {
+    list-style: none;
 }
 
 #mim {
     display: flex;
     flex-direction: column;
     width: 30%;
+    background-color:rgb(161, 221, 181);
+    padding: 2%;
+}
+
+#mim {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+}
+
+p {
+    margin-top: 15px;
+}
+
+#hobby {
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    margin: 5%;
+}
+
+#exemples {
+    display: grid;
+    margin: 5%;
+    grid-template-columns: 50% 50%;
+    column-gap: 10%;
 }
