--- a/hardskills/programacao/aula12/style.css
+++ b/hardskills/programacao/aula12/style.css
@@ -14,15 +14,17 @@ body > div {
     /*background-repeat: no-repeat;*/
     background-size: contain;
     width: 100%;
-    height: 100%;
+    height: fit-content;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 body > div > div {
-    width: 90%;
-    height: 90%;
+    
+    width: 100%;
+    margin: 25px 25px;
+    height: fit-content;
     background-color: #191919;
 }
 
@@ -34,6 +36,7 @@ body > div > div > div {
 }
 
 #quadro-negro {
+    height: calc((35px * 11) + 20px);
 }
 
 #quadro-escrita {
