--- a/hardskills/programacao/aula12/style.css
+++ b/hardskills/programacao/aula12/style.css
@@ -18,6 +18,7 @@ body > div {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 body > div > div {
@@ -40,9 +41,26 @@ body > div > div > div {
 }
 
 #quadro-escrita {
-
     padding: 10px;
     word-wrap: break-word;
     font-size: 30px;
     line-height: 35px;
+}
+
+#quadro-input {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#quadro-input > span {
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+}
+
+#quadro-input > span > * {
+    display: flex;
+    flex-grow: 1;
+    padding: 10px;
 }
