--- a/hardskills/programacao/aula12/style.css
+++ b/hardskills/programacao/aula12/style.css
@@ -45,6 +45,7 @@ body > div > div > div {
     word-wrap: break-word;
     font-size: 30px;
     line-height: 35px;
+    color: whitesmoke;
 }
 
 #quadro-input {
