--- a/hardskills/programacao/corrida/style.css
+++ b/hardskills/programacao/corrida/style.css
@@ -27,25 +27,8 @@ body > div {
     width: 100vmin;
 }
 
-ul {
-    display: grid;
-    list-style: none;
-    column-gap: 1px;
-    row-gap: 1px;
-    width: 90%;
-    height: 90%;
-}
-
-li {
-    display: flex;
-    position: relative;
-    flex-grow: 0;
-    background-color: white;
-    max-width: 100%;
-    max-height: 100%;
-    cursor: pointer;
-    justify-content: center;
-    align-items: center;
+label {
+    color: whitesmoke;
 }
 
 main, header {
@@ -80,7 +63,12 @@ header > h3 {
     line-height: 1em;
 }
 
-header > h2 {
+header > div {
+    display: flex;
+    flex-direction: column;
+}
+
+header > div > h2 {
     display: flex;
     background-color: #191919;
     flex-direction: column;
@@ -93,49 +81,6 @@ header > h2 {
 
 h1 {
     text-align: center;
-}
-
-.marcado {
-    cursor:not-allowed;
-    text-align: center;
-}
-
-li > div {
-    width: 100%;
-    height: 100%;
-    mask-clip: contain;
-    mask-size: 100%;
-    -webkit-mask-size: cover;
-    -webkit-mask-clip: content-box;
-}
-
-li > div.o {
-    background-color: hsl(240, 61%, 44%);
-    -webkit-mask-image: url(images/icono.png);
-    mask-image: url(images/icono.png);
-}
-
-li > div.x {
-    background-color: hsl(0, 61%, 44%);
-    -webkit-mask-image: url(images/iconx.png);
-    mask-image: url(images/iconx.png);
-}
-
-li > div.marcado.win {
-    background-color: blueviolet;
-}
-
-span.empty {
-    color: white;
-}
-
-span.o {
-    color: blue;
-    
-}
-
-span.x {
-    color: red;
 }
 
 main > canvas {
@@ -162,4 +107,69 @@ main nav > h3 {
 
 main h2 {
     color: white;
+}
+
+main h4 {
+    color: white;
+}
+
+aside {
+    display: flex;
+    flex-direction: column;
+    color: whitesmoke;
+}
+
+aside > div {
+    padding: 20px;
+    background-color: #191919;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+aside > div > div {
+    padding: 10px;
+    background-color: #191919;
+    display: flex;
+    flex-direction: column;
+}
+
+#results {
+    display: flex;
+    justify-content: center;
+    width: 90%;
+}
+
+button {
+    text-align: center;
+    justify-content: center;
+}
+
+ul {
+    display: grid;
+    list-style: none;
+    grid-template-columns: 1fr 1fr 1fr;
+    flex-grow: 1;
+}
+
+li {
+    display: flex;
+    position: relative;
+    flex-grow: 1;
+    background-color:#191919;
+    flex-direction: column;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+}
+
+li > h4 {
+    padding: 10px;
+}
+
+
+li > h4 > * {
+    padding: 1em;
 }
