--- a/hardskills/programacao/lojacrediario/style.css
+++ b/hardskills/programacao/lojacrediario/style.css
@@ -60,6 +60,62 @@ main {
     width: 100%;
 }
 
+.tabela {
+    height: 100%;
+    width: 100%;
+    background-color: #191919;
+}
+
+.tabela > ul {
+    overflow-y: scroll;
+    height: 100%;
+    width: 100%;
+    padding: 5px;
+    background-color: #191919;
+}
+
+.tabela li {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    margin: 5px;
+    color: whitesmoke;
+    background-color: #494949;
+}
+
+.tabela li > div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    color: whitesmoke;
+    background-color: #494949;
+}
+
+.tabela li > div > h3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    color: #494949;
+    padding: 10px;
+    background-color: whitesmoke;
+}
+
+.tabela li > div > span {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    margin: 5px;
+    color: whitesmoke;
+    background-color: #494949;
+}
+
+/*
 #compras {
     height: 100%;
     width: 100%;
@@ -116,7 +172,7 @@ main {
 
 #juros > li > h3 {
     text-align: center;
-}
+}*/
 
 .hidden {
     display: none;
